# dynamic_widget_kindle

./: build-local.sh  build.sh  meson.build
src/: main.cpp
src/include/: BatteryWidget.h  ExampleWidget.h  HapticFeedback.h  KindleWindow.h  ModularWidget.h  QuoteWidget.h  SpeakerGrill.h  SpeakerGrillCounter.h  SpeakerGrillDice.h  TimeAndDateWidget.h  WeatherWidget.h
